feat: add viewmodel system to prevent threading issues